--- a/package.json
+++ b/package.json
@@ -8,24 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "0.18.0",
-    "bootstrap-vue": "2.0.0-rc.11",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
+    "bootstrap-vue": "^2.15.0",
+    "eslint": "^7.3.1",
+    "eslint-plugin-vue": "^6.2.2",
     "font-awesome": "4.7.0",
-    "highlightjs": "9.10.0",
-    "liquor-tree": "0.2.32",
-    "vue": "2.5.17",
-    "vue-gravatar": "1.2.1",
-    "vue-mq": "0.2.1",
-    "vue-router": "3.0.1",
-    "vue-toasted": "1.1.24",
-    "vue2-editor": "2.6.6",
-    "vuex": "3.0.1"
+    "highlightjs": "^9.16.2",
+    "liquor-tree": "^0.2.70",
+    "vue": "^2.6.11",
+    "vue-gravatar": "^1.3.1",
+    "vue-mq": "^1.0.1",
+    "vue-router": "^3.3.4",
+    "vue-toasted": "^1.1.28",
+    "vue2-editor": "^2.10.2",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.0.1",
-    "@vue/cli-plugin-eslint": "3.0.1",
-    "@vue/cli-service": "3.0.1",
-    "vue-template-compiler": "2.5.17"
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
@@ -36,7 +39,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-unused-vars": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
