--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "highlightjs": "^9.16.2",
     "liquor-tree": "^0.2.70",
     "vue": "^2.6.11",
+    "vue-country-flag": "^2.0.1",
     "vue-gravatar": "^1.3.1",
+    "vue-i18n": "^8.18.2",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
     "vue-toasted": "^1.1.28",
